<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="Sort By"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_show_top_rated_movies"
                android:title="@string/action_show_top_rated_movies"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_show_popular_movies"
                android:title="@string/action_show_popular_movies"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_show_favorite_movies"
                android:title="@string/action_show_favorite_movies"
                app:showAsAction="ifRoom" />

        </menu>
    </item>
</menu>