<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/activity_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/detail_main_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1.3"
                    android:elevation="3dp"
                    card_view:cardCornerRadius="4dp">

                    <ImageView
                        android:id="@+id/iv_movie_poster"
                        android:layout_width="match_parent"
                        android:layout_height="185dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/mposter" />
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv_movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/tv_marginLeft"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        tools:text="John Wick 2" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="@dimen/tv_marginLeft">

                        <TextView
                            android:id="@+id/tv_movie_user_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="16sp"
                            tools:text="9.0" />

                        <TextView
                            android:id="@+id/tv_movie_user_rating_max_rank"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_rating_max_rank"
                            android:textSize="16sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_movie_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/tv_marginLeft"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp"
                        tools:text="10.2.2017" />

                    <Button
                        android:id="@+id/btn_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/tv_marginLeft"
                        android:theme="@style/AppTheme.Button"
                        tools:text="@string/button_favorite_text" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_main_info"
                android:orientation="vertical"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/movie_info_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/movie_info_label"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tv_movie_plot_synopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/movie_info_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp"
                        tools:text="It continues after 1 movie." />


                    <View
                        android:id="@+id/details_section_divider"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_height"
                        android:layout_below="@id/tv_movie_plot_synopsis"
                        android:layout_marginTop="@dimen/tv_margin"
                        android:background="@color/colorDivider" />

                    <TextView
                        android:id="@+id/tv_trailers_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/details_section_divider"
                        android:layout_marginTop="@dimen/tv_margin"
                        android:text="@string/trailers"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimaryDark" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_movie_trailers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_trailers_text"
                        android:layout_marginTop="@dimen/tv_margin"></android.support.v7.widget.RecyclerView>

                    <TextView
                        android:id="@+id/tv_no_trailers_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_trailers_text"
                        android:layout_marginTop="@dimen/tv_margin"
                        android:textSize="20sp"
                        android:visibility="invisible"
                        tools:text="@string/movie_no_trailer" />


                    <View
                        android:id="@+id/trailers_section_divider"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_height"
                        android:layout_below="@id/rv_movie_trailers"
                        android:layout_marginTop="@dimen/tv_margin"
                        android:background="@color/colorDivider" />

                    <TextView
                        android:id="@+id/tv_review_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/trailers_section_divider"
                        android:layout_marginTop="@dimen/tv_margin"
                        android:text="@string/reviews"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimaryDark" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_movie_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/tv_review_text"
                        android:layout_marginTop="@dimen/tv_margin"></android.support.v7.widget.RecyclerView>

                    <TextView
                        android:id="@+id/tv_no_reviews_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_review_text"
                        android:layout_marginTop="@dimen/tv_margin"
                        android:textSize="20sp"
                        android:visibility="invisible"
                        tools:text="@string/movie_no_review" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
